--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
                             <h4><span>4</span>Fortalece el corazón</h4>
                             <h4><span>5</span>Quema grasa</h4>
                             <h4><span>6</span>Reduce los niveles de estres</h4>
-                            <h4><span>7</span>Fortalece el sistema inmunh4ógico</h4>
-                            <h4><span>8</span>Disminuye riesgo de desarrh4lar cáncer y diabetes</h4>
-                            <h4><span>9</span>Mejor la oxigenación del cerebro</h4>
+                            <h4><span>7</span>Fortalece el sistema inmunlógico</h4>
+                            <h4><span>8</span>Disminuye riesgo de desarrollar cáncer y diabetes</h4>
+                            <h4><span>9</span>Mejora la oxigenación del cerebro</h4>
                             <h4><span>10</span>Mejora la coordinación</h4>
                     </div>
                     
