--- a/index.html
+++ b/index.html
@@ -267,15 +267,6 @@
     <footer>
         <div class="contenedor-footer" id="Contacto">
 
-            <div class="caja-footer">
-                <h4>Teléfono</h4>
-                <p>(+593)-999282767</p>
-            </div>
-
-            <div class="caja-footer ">
-                <h4>Correo</h4>
-                <p>andres.gavino@grupobusiness.it</p>
-            </div>
 
             <div class="caja-footer ">
                 <h4>Dirección</h4>
@@ -284,7 +275,7 @@
 
         </div>
 
-        <h2 class="titulo-final ">©Andres Gavino Todos los derechos reservados</h2>
+        <h2 class="titulo-final ">🚀 2021</h2>
 
     </footer>
 
